tests/ui/const-generics/const-argument-typo.stderr
error[E0425]: cannot find type `CONS` in this scope
  --> $DIR/const-argument-typo.rs:8:11
   |
LL | const CONST: usize = 0;
   | ----------------------- similarly named constant `CONST` defined here
...
LL |     foo::<CONS>(); 
   |           ^^^^ help: a constant with a similar name exists: `CONST`

error[E0747]: unresolved item provided when a constant was expected
  --> $DIR/const-argument-typo.rs:8:11
   |
LL |     foo::<CONS>(); 
   |           ^^^^
   |
help: if this generic argument was intended as a const parameter, surround it with braces
   |
LL |     foo::<{ CONS }>(); 
   |           +      +

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0747.
For more information about an error, try `rustc --explain E0425`.
